# AniLab-Discord-Bot

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  Anilab.rc  CMakeLists.txt  LICENSE  MIT-LICENSE.md  README.md  SECURITY.md  appveyor.yml  package-lock.json  package.json  premake5.lua  tsconfig.json
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml
.github/workflows/: cmake.yaml
commands/common/: ping.js
cores/: button.h  client_dotenv.h  cmd_button.h  cmd_config.h  cmd_configure.h  cmd_layout.h  cmd_lists.h  cmd_struct.h  db_create.h  db_handler.h  decoder.h  dotenv.h  embed_builder.h
events/: interaction.js  ready.js  ready.ts  status.js  status.ts
handlers/: event_handler.ts
include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common.h
include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
include/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
include/spdlog/fmt/: bin_to_hex.h
include/spdlog/fmt/bundled/: args.h  chrono.h  os.h  (+10 more)
include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
languages/: de-de.json  en-us.json  ja-jp.json  ru-ru.json  vi-vn.json
lib/: dpp.lib  sqlite3.lib
src/: cmd_register.js  index.js  index.ts  main.cpp
src/cmd_common/: language.cpp  ping.cpp
src/cmd_mihoyo/: login.cpp
src/commands/: ping.ts
src/database/: db_configuration.cpp  db_load.cpp
src/embed_builder/: embed_language.cpp
src/handler/: slashcommands.ts
